--- a/frontend/src/employee/pages/admin/employees/employees.scss
+++ b/frontend/src/employee/pages/admin/employees/employees.scss
@@ -4,6 +4,7 @@
   .employees_innercontainer {
     height: 100%;
     width: 100%;
+    // border: 2px  solid rgb(34, 19, 19);
 
     @include flex(column, null, null, 10px);
     h1 {
@@ -11,22 +12,23 @@
       font-size: 2.5rem;
       margin: 10px 0px;
       @include responsive(500px) {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
       }
+      
     }
     .bottom {
       padding: 5px;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 30px;
-      grid-auto-rows: 300px;
+      grid-auto-rows: 380px;
       color: rgb(7, 7, 24);
       @include responsive(900px) {
         grid-template-columns: repeat(3, 30%);
         padding: 10px;
       }
       @include responsive(500px) {
-        grid-template-columns: repeat(1, 60%);
+        grid-template-columns: repeat(1, 90%);
         justify-content: center;
       }
     }
